<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_User_Dashbord">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="200dp"
        android:orientation="vertical"
        android:background="@drawable/background">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="422dp"
            android:layout_height="139dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/dashbord" />
        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="10dp"
            android:text="User Dashboard"
            android:textSize="30sp"
            android:textStyle="bold"
            />

    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout812"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_profile"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_corners2"
                android:drawableTop="@drawable/vector1"
                android:paddingTop="15sp"
                android:text="@string/user_dashboard"
                android:textAlignment="center" />

            <Button
                android:id="@+id/my_applica"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_corners2"
                android:drawableTop="@drawable/document"
                android:paddingTop="15sp"
                android:text="@string/user_application"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="292dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bookmark_btn"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_corners2"
                android:drawableTop="@drawable/userbook"
                android:paddingTop="15sp"
                android:text="@string/user_bookmark"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="440dp" />

            <Button
                android:id="@+id/Interest"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_corners2"
                android:drawableTop="@drawable/oo"
                android:paddingTop="15sp"
                android:text="@string/user_interested"
                tools:layout_editor_absoluteX="203dp"
                tools:layout_editor_absoluteY="440dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/user_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/rounded_corners2"
                android:drawableRight="@drawable/logout"
                android:paddingTop="5sp"
                android:paddingRight="35sp"
                android:text="@string/LogOut_txt"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="100dp"
                android:clickable="true"
                android:text="@string/helpAndSupportTxt"
                android:textColor="#378CD6"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
</ScrollView>